# ann-ai-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  layout.txt
.sqlx/: query-048a937957f4459a93f43b3068b2063e640491a145f4a453c82a027e02227510.json  query-854893911d55238012a93831846d0829dbb3a8f70051b311c1ad5c78db74bb56.json  query-fc6ead7db7f02a5db29a0beca03c59cf2bf5f9ccc84aa359178bc7c2ec885357.json
migrations/: 20240618_create_user_info.sql
src/: app_state.rs  config.rs  error.rs  gemini.rs  main.rs  result.rs
src/extension/: auth.rs  logger.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: mod.rs  user.rs
src/models/dto/: auth.rs  mod.rs  user.rs
src/repositories/: auth.rs  user.rs
src/services/: auth.rs  user.rs
src/utils/: get_token_from_header.rs  jwt.rs  mod.rs  password.rs  sha256.rs  uudi_convert_32byte.rs
