# Cargo.toml
[package]
name = "ann-ai-backend" 
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4" 

# Eşzamansız Çalışma Zamanı
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 

# Veri Serileştirme/Deserileştirme
serde = { version = "1", features = ["derive"] } # Rust struct'larını JSON'a/JSON'dan dönüştürmek için
serde_json = "1" # JSON işlemleri için

# Veritabanı (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "bigdecimal"] } # Asenkron PostgreSQL istemcisi

# Şifre Hashleme
argon2 = "0.5" # Güvenli şifre hashleme için (veya bcrypt = "0.15")

# JWT (JSON Web Token)
jsonwebtoken = "8" # JWT oluşturma ve doğrulama için

# Redis
deadpool-redis = { version = "0.14", features = ["serde"] } # Redis bağlantı havuzu
redis = { version = "0.23", features = ["tokio-comp"] } # Asenkron Redis istemcisi

# UUID Oluşturma
uuid = { version = "1", features = ["serde", "v4"] } # Benzersiz ID'ler için

# Zaman ve Tarih
chrono = { version = "0.4", features = ["serde"] } # Zaman damgaları ve JWT süre sonu için

# Hata Yönetimi ve Türetmeler
derive_more = "0.99" # enum'lar için Display, Error gibi trait'leri otomatik türetmek için
thiserror = "1" # Daha iyi hata yönetimi ve dönüşümleri için (Opsiyonel, derive_more ile birleştirilebilir)

# Ortam Değişkenleri
dotenvy = "0.15" # .env dosyasından ortam değişkenlerini yüklemek için

# Loglama ve İzleme
tracing = "0.1" # Yapılandırılmış loglama ve izleme için
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Tracing'i yapılandırmak için

# Diğer Yardımcılar
futures = "0.3" # Asenkron akışlar ve futures için
validator = { version = "0.18", features = ["derive"] } # DTO'lar için veri doğrulaması (Opsiyonel)
envy = "0.4.2"
bigdecimal = { version = "0.3", features = ["serde"] }
deadpool = "0.12.2"
actix-cors = "0.7.1"
num_cpus = "1.17.0"
env_logger = "0.11.8"
log = "0.4.17"
crypto = "0.5.1"
sha2 = "0.10.9"
